# pyvista-cityjson

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: twocube.city.json  visualize_twocube.py
pyvista_cityjson/: __init__.py  reader.py
tests/: __init__.py  conftest.py  test_reader.py
