[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvista_cityjson"
version = "0.1.0"
description = "Visualize CityJSON data with PyVista in Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "PyVista CityJSON Contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = ["pyvista[jupyter]>=0.40.0", "numpy>=1.20.0"]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "pre-commit", "ruff"]

[project.scripts]
pyvista-cityjson = "pyvista_cityjson.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyvista_cityjson*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ISC001", "D203", "D213"]
